<resources>
    <string name="app_name" translatable="false">WebFactory</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">WebFactory</string>
    <string name="nav_header_subtitle" translatable="false">http://www.remdizel.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Настройки</string>
    <string name="action_exit" translatable="false">Выход</string>

    <string name="menu_home" translatable="false">Главная</string>
    <string name="menu_calendar" translatable="false">График работы</string>
    <string name="menu_review" translatable="false">Отзывы</string>
    <string name="menu_polls" translatable="false">Анкетирование</string>
    <string name="button_review">Отзыв</string>
    <string name="demo_review">Оставьте ваш отзыв</string>
    <string name="toast_review">Отзыв создан!</string>
    <string name="toast_polls">Анкета создана!</string>
    <string name="btn_str_del_review">Удалить отзыв</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_str_polls_create">Создать анкету</string>
    <string name="alert_polls_title_str">Заголовок анкеты</string>
    <string name="ask_polls_str">Ваш вопрос</string>
    <string name="send_polls_str">Отправить анкету</string>
    <string name="btn_str_update_review">Изменить отзыв</string>
    <string name="delete_polls_str">Удалить анкету</string>
    <string name="user_text_review">User</string>
    <string name="author_text_review">Автор:</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="select_shedule">Выберете график работы</string>
    <string name="select">Выбрать</string>
    <string name="selected_shedule">Выбран график работы 2/2</string>
    <string name="cancel">Отмена</string>
    <string name="atention">Внимание</string>
    <string name="delete_shedule_ask">Вы действительно хотите удалить рабочий график?</string>
    <string name="delete_shedule">График удален!</string>
</resources>