<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.webfactory.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.webfactory.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_forum"
        android:name="com.example.webfactory.ui.slideshow.ReviewFragment"
        android:label="@string/menu_review"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/nav_polls"
        android:name="com.example.webfactory.ui.polls.PollsFragment"
        android:label="@string/menu_polls"
        tools:layout="@layout/fragment_polls" >
        <action
            android:id="@+id/action_nav_polls_to_pollsPage2"
            app:destination="@id/pollsPage2" />
    </fragment>
    <fragment
        android:id="@+id/pollsPage2"
        android:name="com.example.webfactory.ui.polls.PollsPageFragment"
        android:label="Анкета"
        tools:layout="@layout/fragment_polls_page" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.webfactory.ui.login.LoginFragment"
        android:label="Авторизация"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>